[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kpf"
version = "0.1.0"
description = "Knowledge Product Factory — research, design, and package knowledge products"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "orjson>=3.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[project.scripts]
kpf = "kpf.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["kpf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
