[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpf"
version = "0.1.0"
description = "Knowledge Product Factory CLI runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.1",
  "orjson>=3.10.7",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
kpf = "kpf.cli.main:app"

[tool.setuptools]
packages = ["kpf"]

[tool.setuptools.package-dir]
"kpf" = "kpf"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
